<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SwitchPreference
        android:defaultValue="false"
        android:key="countReverse"
        android:title="@string/settings_countReverse" />

    <EditTextPreference
        android:defaultValue="100"
        android:enabled="false"
        android:inputType="number"
        android:key="callMax"
        android:summary="@string/settings_callMax_summary"
        android:title="@string/settings_callMax_title" />

    <EditTextPreference
        android:defaultValue="100"
        android:enabled="false"
        android:inputType="number"
        android:key="smsMax"
        android:summary="@string/settings_smsMax_summary"
        android:title="@string/settings_smsMax_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="round"
        android:summary="@string/settings_minutes_summary"
        android:title="@string/settings_minutes_title" />

    <EditTextPreference
        android:defaultValue="160"
        android:inputType="number"
        android:key="smsCharCount"
        android:summary="@string/settings_sms_summary"
        android:title="@string/settings_sms_title" />

</PreferenceScreen>